# ocr-service

./: .env.example  .gitignore  MANIFEST.in  README.md  README_COMPILACION_LIBRERIA.md  main.py  main_bc3_test.py  pyproject.toml  request.json  requirements.txt
application/pipelines/: batch_folder_pipeline.py  bc3_classification_pipeline.py  file_processing_pipeline.py  ocr_extraction_pipeline.py
application/services/: catalog_candidate_selector.py  ocr_extractor_service.py  prompted_extraction_service.py  prompted_text_extraction_service.py  schema_registry.py
config/: bc3_catalog.yaml  logging_config.py  prompts.yaml  settings.py
domain/models/: bc3_classification_models.py  llm_attachment.py  ocr_models.py  residuos_models.py  residuos_paquete.py
domain/ports/: llm_client.py  llm_text_client.py  prompt_repository.py  result_publisher.py
infrastructure/catalog/: compact_catalog_yaml_repository.py  product_catalog_cache.py  product_catalog_loader.py
infrastructure/document/: file_loader.py  pdf_renderer.py
infrastructure/fs/: excel_summary_writer.py  input_scanner.py  output_writer.py
infrastructure/llm/: openai_responses_client.py  openai_responses_text_client.py  openai_sdk_compat.py
infrastructure/prompts/: yaml_prompt_repository.py
interface_adapters/api/: app.py  bc3_models.py
pipelines/: bc3_classification_pipeline.py
ruesma_ocr_service/: __init__.py  bc3_classifier.py  bc3_library.py  runtime_resources.py
services/: prompted_text_extraction_service.py
simulation/: service3_residuos_excel_exporter.py
tools/: build_bc3_catalog_yaml.py
(+33 files in other folders)
