[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ruesma-ocr-service"
version = "0.1.0"
description = "Librería local (fase 1) para clasificador BC3 y OCR"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "openai>=1.0.0",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
  "httpx>=0.24.0",
  "PyYAML>=6.0.0",
  "openpyxl>=3.1.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = [
  "ruesma_ocr_service*",
  "application*",
  "config*",
  "domain*",
  "infrastructure*"
]